--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
-#DinoAventura{
-  display: flex;
-  margin: 0 auto;
-  height: 300px;/*Tamanho das imagem*/
-  padding: 0%;
-  justify-content: center;
-  margin-top: 1rem;
-  
-  @media(max-width:1024px){
-    #DinoAventura{
-      display:none;
-    }
+#albrasConnect{
+ /*height: 250px; Tamanho das imagem*/
+  width:25rem;
+  margin-top:7.5rem;
+}
+#imgConnectCell {
+  height: 8rem;/*Tamanho das imagem*/
+  width:13rem;/*Largura da imagem*/
+  align-items: center;
+
+  @media(min-width:1024px){
+  display:none;
   }
 }
+
 body {
   margin: 0;
   border: 0;
@@ -26,43 +27,44 @@ form {
   justify-content: center;
   align-items: center;
   width: 39.8rem; 
-  height:50rem;
+  height:30rem;
 
   @media(max-width:1024px){
     width: 22rem; 
-    height:50rem;
+    height:25rem;
   }
 }
 
-
 #backgroundSystem {
-  background-image: url("/img/tecnologiaLaranjaFundo.jpg.");
-  background-repeat: no-repeat;
+  background-image: url(""); 
+  background-repeat: no-repeat; 
   background-size: cover;/*Faz com que a imagem ocupe todo o espaço da tela*/
   height: 100vh;
   justify-content: center;/*De baixo para cima*/
   display: flex;/*Pode colocar um item um do lado do outro*/
   flex-direction: column;
 
-  /* ignorar valores padrões*/
+  /*ignorar valores padrões*/
   box-sizing:border-box;
+  @media(max-width:10124px) {
+    background-color: white
+  }
 }
 
 div {/*"imagem" do fundo*/
   margin: 0 auto;
-  width: 85%;
+  width: 89%;
   padding: 0.3%;
+  margin-top:0.5rem;
 
   @media(max-width: 1024px) {
     display: block;
-    margin-top: 1px; 
-  
+     margin-top: 0.1rem; 
   }
- 
 }
-h2 {
+h1 {
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-bottom: 2rem;
   animation-delay: 10ms;
   }
@@ -77,18 +79,19 @@ input:houver{
 
 .main-container {
   padding:0%;
-   width: 90rem; 
-   height: 50rem;
-  /* background-color: white;   */
+   width: 80rem; 
+   height: 45rem;
+   background-color: rgba(255, 255, 255, 0.534); 
   display: flex;  align-items: center; /*Serve para colocar o texto no centro*/
-  justify-content: center;
+  /* justify-content: center; */
   border-radius: 15px; /*Serve para colocar uma borda arredondada*/
   box-shadow: 1px 1px 5px 0px gray; /*Serve para colocar uma borda sombreada*/
   /*backdrop-filter: blur(100px); Serve para colcoar um blur na div*/
 
 @media(max-width:1024px){
-  width: 25rem;
+  width: 2rem;
   flex-flow: column;
+  box-shadow: none;
 }
 
 button {
@@ -96,26 +99,26 @@ button {
   border-radius: 0.3rem; 
   background-color: #EC6F01;
   color: white; /*cor da letra de dentro do botão*/
-  transition: 0.5s ease;
+  transition: 1.1s ease;
   margin-top: 2%; /*Serve para dar um espaçamento entre os campos*/
   cursor: pointer;
   border: none;
 }
 
 #btn-enviar{
-  margin-left:0rem;
-  margin-top: 0;
+  margin-top: 2rem;
   padding: 8px 36px;
-  width: 30rem;
+  width: 20rem;/*10.5rem*/
+  margin-bottom: 2rem;
+  margin-right: 1rem;
+  height: 3rem;
 
   @media(max-width:1024px) {
     padding: 8px 36px;
     width: 20rem; /*Comprimento do botão*/
-    margin-left: 0;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-   
-    
+    margin-top: 1rem;
+    margin-right: 0;
+    margin-bottom:0;
   }
 }
 
@@ -137,7 +140,6 @@ span{
   border-radius:0.3rem;
   background-color: #fafafa;
   transition: 1s ease; /*Tempo de cada transição ao passar o mouse em cima do botão*/
-
   
   @media(max-width:1024px){
   align-items: center;
@@ -146,23 +148,30 @@ span{
   width: 18rem;
   height: 2rem;
 }
+
 }
 .input-esquerda {
   float: left;
-  width: 10.9rem;
+  width: 8rem;
   display: flex;
 }
+
+.input-text-aling-left {
+  text-align: left;
+}
+
 input:hover {
   border-color: #ea580c;
 }
 
 .container-infos{/*DinoAventura*/
  background-color: #EC6F01;
- height: 50.1rem;/*Altura da cor*/
+ height: 44.6rem;/*Altura da cor*/
  width: 45rem;/*Comprimento da cor*/
  display:flex;
  border-radius:15px 0px 0px 15px;
  display: block;
+ margin:0px;
 
  @media(max-width:1024px){
   display: none;
@@ -170,30 +179,31 @@ input:hover {
 }
 
 .container-form{/*Cadastro*/
- height: 50rem;/*Altura*/
+ height: 40.5rem;/*Altura*/
  width: 40rem;/*Comprimento*/
  display:flex;
+ margin-top: 0;
 
  @media(max-width:1024px) {
-  height: 50rem;/*Altura*/
- width: 21rem;/*Comprimento*/
+  height: 44.7rem;/*Altura*/
+ width: 2rem;/*Comprimento*/
  display:flex;
  padding-left: none;
  justify-content: center;
- }
+}
 }
 
 /*//////////////////////////////////////////////////////////////////////////////////*/
 
 /*Carosel*/
 
-.carousel-inner {
+/* .carousel-inner {
   background-color: #F3A35D;
   color:white;
   margin-top: 12rem;
   border-radius: 15px;
   height:15.5rem;
-}
+} */
 /* .carousel-control-prev{
   margin-top: 16rem;
 }
@@ -216,31 +226,40 @@ h1 {
 #openModal {
   display: flex;
   margin: 0rem 1rem 0rem  0rem;
-  width: 35rem;
+  width: 7.1rem;
   justify-content: left;
   align-items:center ;
 
   @media(max-width: 1024px) {
   display: block;
   margin: 1rem 0rem 0.6rem 0rem;
-  width: 20rem;
-
+  width: 7.1rem;
   }
 }
+
 #display-flex {
-  display:flex;
+  display:block;
   justify-content: left;
   align-items: center;
   width:35rem;
-  margin: 1rem 1rem 0rem 3rem;
+  margin: 1rem 1rem 0rem 2.5rem;
 
   @media(max-width:1024px) {
     display:block;
-    width:20rem;
-    height: 9rem;
-    margin:1rem 1rem 0rem ;
+    width:20.3rem;
+    height: 8.5rem;
+    margin:0.5rem 0.5rem 0rem 0.5rem ;
     justify-content: center;
     align-tens: center;
+  }
+}
+
+.juntos-flex {
+  display:-webkit-box; 
+  width: 17rem;
+
+  @media (max-width:1024px) {
+    display:ruby;
   }
 }
 
@@ -277,26 +296,29 @@ span:hover {
 #modal {
   position: fixed;
   left: 50%; /*Coloca 50% na esquerda da tela, não deixando o conteudo centralizado*/
-  top: 50%; /*Coloca 50% de cima da tela, não deixando o conteudo centralizado*/
+  top: 49.5%; /*Coloca 50% de cima da tela, não deixando o conteudo centralizado*/
   transform: translate(-50%,-50%); /*Serev para colocar porcentagem negativa, centralizando o modal no centro*/
   background: linear-gradient(to top, #e5e5e5, #d4d4d4);
   box-shadow: 1px 1px 5px 0px ;
   z-index: 10;
   width: 50rem;
-  height: 35rem;
+  height: 42.6rem;
   max-width: 95%; /*Serve para colocar um limite de 90%, caso a tela seja menor de 500px ele deixa em 90%*/
   padding: 1.2rem;
   border-radius: 0.5rem;
   align-items: center;
   justify-content: center;/*De baixo para cima*/
 
+  @media(max-width:1024px) {
+  height: 54rem;
+  }
 }
+
 #fade,
 #modal {
   transition: 0.5s;
   opacity: 1;
   pointer-events: all;
- 
 }
 
 .modal-header {
