--- a/style.css
+++ b/style.css
@@ -1,351 +1,351 @@
 #albrasConnect{
- /*height: 250px; Tamanho das imagem*/
-  width:25rem;
-  margin-top:7.5rem;
-}
-#imgConnectCell {
-  height: 8rem;/*Tamanho das imagem*/
-  width:13rem;/*Largura da imagem*/
-  align-items: center;
-
-  @media(min-width:1024px){
-  display:none;
-  }
-}
-
-body {
-  margin: 0;
-  border: 0;
-  padding: 1rem; /* 1 rem é igual a 16px, ele normalmente serve para telas onde o espaçamento da fonete é maior*/
-  font-family: 'Roboto', sans-serif; 
-  /*Deixa as letras mais bonitas sem parecer que estão "Quebradas"*/
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-form {
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  width: 39.8rem; 
-  height:30rem;
-
-  @media(max-width:1024px){
-    width: 22rem; 
-    height:25rem;
-  }
-}
-
-#backgroundSystem {
-  background-image: url(""); 
-  background-repeat: no-repeat; 
-  background-size: cover;/*Faz com que a imagem ocupe todo o espaço da tela*/
-  height: 100vh;
-  justify-content: center;/*De baixo para cima*/
-  display: flex;/*Pode colocar um item um do lado do outro*/
-  flex-direction: column;
-
-  /*ignorar valores padrões*/
-  box-sizing:border-box;
-  @media(max-width:10124px) {
-    background-color: white
-  }
-}
-
-div {/*"imagem" do fundo*/
-  margin: 0 auto;
-  width: 89%;
-  padding: 0.3%;
-  margin-top:0.5rem;
-
-  @media(max-width: 1024px) {
-    display: block;
-     margin-top: 0.1rem; 
-  }
-}
-h1 {
-  text-align: center;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  animation-delay: 10ms;
-  }
-
-h6 {
-  text-align: right;
-}
-
-input:houver{
-  opacity: 0;
-}
-
-.main-container {
-  padding:0%;
-   width: 80rem; 
-   height: 45rem;
-   background-color: rgba(255, 255, 255, 0.534); 
-  display: flex;  align-items: center; /*Serve para colocar o texto no centro*/
-  /* justify-content: center; */
-  border-radius: 15px; /*Serve para colocar uma borda arredondada*/
-  box-shadow: 1px 1px 5px 0px gray; /*Serve para colocar uma borda sombreada*/
-  /*backdrop-filter: blur(100px); Serve para colcoar um blur na div*/
-
-@media(max-width:1024px){
-  width: 2rem;
-  flex-flow: column;
-  box-shadow: none;
-}
-
-button {
-  padding: 8px 120px;
-  border-radius: 0.3rem; 
-  background-color: #EC6F01;
-  color: white; /*cor da letra de dentro do botão*/
-  transition: 1.1s ease;
-  margin-top: 2%; /*Serve para dar um espaçamento entre os campos*/
-  cursor: pointer;
-  border: none;
-}
-
-#btn-enviar{
-  margin-top: 2rem;
-  padding: 8px 36px;
-  width: 20rem;/*10.5rem*/
-  margin-bottom: 2rem;
-  margin-right: 1rem;
-  height: 3rem;
-
-  @media(max-width:1024px) {
-    padding: 8px 36px;
-    width: 20rem; /*Comprimento do botão*/
-    margin-top: 1rem;
-    margin-right: 0;
-    margin-bottom:0;
-  }
-}
-
-span{
-  color: rgb(58, 58, 253);
-  text-decoration: underline;
-  cursor: pointer;
-  margin-right: 5px; 
-}
-
-.negrito {
-  font-weight: bold; /*Serve para colocar as letras em negrito*/
-}
-
-.input-padrao {
-  height: 3rem;
-  width: 35rem;
-  /* padding: 10px 150px; */
-  border-radius:0.3rem;
-  background-color: #fafafa;
-  transition: 1s ease; /*Tempo de cada transição ao passar o mouse em cima do botão*/
-  
-  @media(max-width:1024px){
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  width: 18rem;
-  height: 2rem;
-}
-
-}
-.input-esquerda {
-  float: left;
-  width: 8rem;
-  display: flex;
-}
-
-.input-text-aling-left {
-  text-align: left;
-}
-
-input:hover {
-  border-color: #ea580c;
-}
-
-.container-infos{/*DinoAventura*/
- background-color: #EC6F01;
- height: 44.6rem;/*Altura da cor*/
- width: 45rem;/*Comprimento da cor*/
- display:flex;
- border-radius:15px 0px 0px 15px;
- display: block;
- margin:0px;
-
- @media(max-width:1024px){
-  display: none;
+  /*height: 250px; Tamanho das imagem branca*/
+   width:25rem;
+   margin-top:10rem;
  }
-}
-
-.container-form{/*Cadastro*/
- height: 40.5rem;/*Altura*/
- width: 40rem;/*Comprimento*/
- display:flex;
- margin-top: 0;
-
- @media(max-width:1024px) {
-  height: 44.7rem;/*Altura*/
- width: 2rem;/*Comprimento*/
- display:flex;
- padding-left: none;
- justify-content: center;
-}
-}
-
-/*//////////////////////////////////////////////////////////////////////////////////*/
-
-/*Carosel*/
-
-/* .carousel-inner {
-  background-color: #F3A35D;
-  color:white;
-  margin-top: 12rem;
-  border-radius: 15px;
-  height:15.5rem;
-} */
-/* .carousel-control-prev{
-  margin-top: 16rem;
-}
-.carousel-control-next {
-  margin-top: 16rem;
-}
- */
-
-/*/////////////////////////////////////////////////////////////////////////////*/
-
-
-/*Configuração do modal*/
-
-/* O * serve para pegar todo o HTML e as tags abaixo estão resentando as configuração impostas pelo HTML, para que possamos criar as nossa configuração do zero.*/
-
-h1 {
-  padding-bottom: 1rem;
-}
-
-#openModal {
-  display: flex;
-  margin: 0rem 1rem 0rem  0rem;
-  width: 7.1rem;
-  justify-content: left;
-  align-items:center ;
-
-  @media(max-width: 1024px) {
+ #imgConnectCell {
+   height: 10rem;/*Tamanho das imagem laranja*/
+   /*width:13rem;Largura da imagem laranja*/
+   align-items: center;
+   margin-top:4rem;
+ 
+   @media(min-width:1024px){
+   display:none; /*exclui a imagem laranja nas telas de pc*/
+   }
+ }
+ 
+ body {
+   margin: 0;
+   border: 0;
+   padding: 1rem; /* 1 rem é igual a 16px, ele normalmente serve para telas onde o espaçamento da fonete é maior*/
+   font-family: 'Roboto', sans-serif; 
+   /*Deixa as letras mais bonitas sem parecer que estão "Quebradas"*/
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+ }
+ form {
+   text-align: center;
+   justify-content: center;
+   align-items: center;
+   width: 39.8rem; 
+   height:30rem;
+ 
+   @media(max-width:1024px){
+     width: 22rem; 
+     height:25rem;
+   }
+ }
+ 
+ #backgroundSystem {
+   background-image: url(""); 
+   background-repeat: no-repeat; 
+   background-size: cover;/*Faz com que a imagem ocupe todo o espaço da tela*/
+   height: 100vh;
+   justify-content: center;/*De baixo para cima*/
+   display: flex;/*Pode colocar um item um do lado do outro*/
+   flex-direction: column;
+ 
+   /*ignorar valores padrões*/
+   box-sizing:border-box;
+   @media(max-width:10124px) {
+     background-color: white;
+     height: 100vh;
+   }
+ }
+ 
+ div {/*"imagem" do fundo*/
+   margin: 0 auto;
+   width: 89%;
+   padding: 0.3%;
+   margin-top:0.5rem;
+ 
+   @media(max-width: 1024px) {
+     display: block;
+      margin-top: 0.1rem; 
+   }
+ }
+ h1 {
+   text-align: center;
+   margin-top: 1rem;
+   margin-bottom: 2rem;
+   animation-delay: 10ms;
+   }
+ 
+ h6 {
+   text-align: right;
+ }
+ 
+ input:houver{
+   opacity: 0;
+ }
+ 
+ .main-container {
+   padding:0%;
+    width: 80rem; 
+    height: 55rem;
+    background-color: rgba(255, 255, 255, 0.534); 
+   display: flex;  align-items: center; /*Serve para colocar o texto no centro*/
+   /* justify-content: center; */
+   border-radius: 15px; /*Serve para colocar uma borda arredondada*/
+   box-shadow: 1px 1px 5px 0px gray; /*Serve para colocar uma borda sombreada*/
+   /*backdrop-filter: blur(100px); Serve para colcoar um blur na div*/
+ 
+ @media(max-width:1024px){
+   width: 2rem;
+   flex-flow: column;
+   box-shadow: none;
+ }
+ 
+ button {
+   padding: 8px 120px;
+   border-radius: 0.3rem; 
+   background-color: #EC6F01;
+   color: white; /*cor da letra de dentro do botão*/
+   transition: 1.1s ease;
+   margin-top: 2%; /*Serve para dar um espaçamento entre os campos*/
+   cursor: pointer;
+   border: none;
+ }
+ 
+ #btn-enviar{
+   margin-top: 2rem;
+   padding: 8px 36px;
+   width: 20rem;/*10.5rem*/
+   margin-bottom: 2rem;
+   margin-right: 1rem;
+   height: 3rem;
+ 
+   @media(max-width:1024px) {
+     padding: 8px 36px;
+     width: 20rem; /*Comprimento do botão*/
+     margin-top: 1rem;
+     margin-right: 0;
+     margin-bottom:0;
+   }
+ }
+ 
+ span{
+   color: rgb(58, 58, 253);
+   text-decoration: underline;
+   cursor: pointer;
+   margin-right: 5px; 
+ }
+ 
+ .negrito {
+   font-weight: bold; /*Serve para colocar as letras em negrito*/
+ }
+ 
+ .input-padrao {
+   height: 3rem;
+   width: 35rem;
+   /* padding: 10px 150px; */
+   border-radius:0.3rem;
+   background-color: #fafafa;
+   transition: 1s ease; /*Tempo de cada transição ao passar o mouse em cima do botão*/
+   
+   @media(max-width:1024px){
+   align-items: center;
+   justify-content: center;
+   flex-direction: row;
+   width: 18rem;
+   height: 2rem;
+ }
+ 
+ }
+ .input-esquerda {
+   float: left;
+   width: auto;
+   display: flex;
+ }
+ 
+ .input-text-aling-left {
+   text-align: left;
+ }
+ 
+ input:hover {
+   border-color: #ea580c;
+ }
+ 
+ .container-infos{/*DinoAventura*/
+  background-color: #EC6F01;
+  height: 54.6rem;/*Altura da cor*/
+  width: 45rem;/*Comprimento da cor*/
+  display:flex;
+  border-radius:15px 0px 0px 15px;
   display: block;
-  margin: 1rem 0rem 0.6rem 0rem;
-  width: 7.1rem;
+  margin:0px;
+ 
+  @media(max-width:1024px){
+   display: none;
   }
-}
-
-#display-flex {
-  display:block;
-  justify-content: left;
-  align-items: center;
-  width:35rem;
-  margin: 1rem 1rem 0rem 2.5rem;
-
+ }
+ 
+ .container-form{/*Cadastro*/
+  height: 40.5rem;/*Altura*/
+  width: 40rem;/*Comprimento*/
+  display:flex;
+  margin-top: 0;
+ 
   @media(max-width:1024px) {
-    display:block;
-    width:20.3rem;
-    height: 8.5rem;
-    margin:0.5rem 0.5rem 0rem 0.5rem ;
-    justify-content: center;
-    align-tens: center;
-  }
-}
-
-.juntos-flex {
-  display:-webkit-box; 
-  width: 17rem;
-
-  @media (max-width:1024px) {
-    display:ruby;
-  }
-}
-
-span:hover {
-  opacity: 1;
-}
-
-#close-modal,
-#modal {
-  transition: 0.5s;
-  opacity: 1;
-  pointer-events: all;
-}
-
-#close-modal {
-  position: fixed;
-  top: 0;
-  right: 0%;
-  color: black;
-  background-color: #ea580c;
-  z-index: 5; /*Serve para colocar o botão na frente dos outros elementos, impossibilitando que o usuário clique em alguma coisa fora do model*/
-}
-
-#fade {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  z-index: 5;
-}
-
-#modal {
-  position: fixed;
-  left: 50%; /*Coloca 50% na esquerda da tela, não deixando o conteudo centralizado*/
-  top: 49.5%; /*Coloca 50% de cima da tela, não deixando o conteudo centralizado*/
-  transform: translate(-50%,-50%); /*Serev para colocar porcentagem negativa, centralizando o modal no centro*/
-  background: linear-gradient(to top, #e5e5e5, #d4d4d4);
-  box-shadow: 1px 1px 5px 0px ;
-  z-index: 10;
-  width: 50rem;
-  height: 42.6rem;
-  max-width: 95%; /*Serve para colocar um limite de 90%, caso a tela seja menor de 500px ele deixa em 90%*/
-  padding: 1.2rem;
-  border-radius: 0.5rem;
-  align-items: center;
-  justify-content: center;/*De baixo para cima*/
-
-  @media(max-width:1024px) {
-  height: 54rem;
-  }
-}
-
-#fade,
-#modal {
-  transition: 0.5s;
-  opacity: 1;
-  pointer-events: all;
-}
-
-.modal-header {
-  display: flex; /*Serve para deixar um item ao lado do outro*/
-  justify-content: space-between; /*Serve para deixar espaçamento entre os itens*/
-  align-items: center;
-  border-bottom: 1px solid #acacac; /*Serve parea colcoar um borda entre o titulo do modal e o conteudo*/
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-  flex-direction: column;
-}
-
-.modal-body p {
-  margin-bottom: 1rem;
-}
-
-/*Esta escondendo o modal e impossibilitando o clique fora do modal*/
-#modal.hide,
-#fade.hide {
-  opacity: 0;
-  pointer-events: none;
-}
-
-/*Fazendo com que o modal venha de cima para baixo*/
-#modal.hide {
-  top: 0px;
-}
-}
-
-
+   height: 44.7rem;/*Altura*/
+  width: 2rem;/*Comprimento*/
+  display:flex;
+  padding-left: none;
+  justify-content: center;
+ }
+ }
+ 
+ /*//////////////////////////////////////////////////////////////////////////////////*/
+ 
+ /*Carosel*/
+ 
+ /* .carousel-inner {
+   background-color: #F3A35D;
+   color:white;
+   margin-top: 12rem;
+   border-radius: 15px;
+   height:15.5rem;
+ } */
+ /* .carousel-control-prev{
+   margin-top: 16rem;
+ }
+ .carousel-control-next {
+   margin-top: 16rem;
+ }
+  */
+ 
+ /*/////////////////////////////////////////////////////////////////////////////*/
+ 
+ 
+ /*Configuração do modal*/
+ 
+ /* O * serve para pegar todo o HTML e as tags abaixo estão resentando as configuração impostas pelo HTML, para que possamos criar as nossa configuração do zero.*/
+ 
+ h1 {
+   padding-bottom: 1rem;
+ }
+ 
+ #openModal {
+   display: flex;
+   margin: 0rem 1rem 0rem  0rem;
+   width: 7.1rem;
+   justify-content: left;
+   align-items:center ;
+ 
+   @media(max-width: 1024px) {
+   display: block;
+   margin: 1rem 0rem 0.6rem 0rem;
+   width: 7.1rem;
+   }
+ }
+ 
+ #display-flex {
+   display:block;
+   justify-content: left;
+   align-items: center;
+   width:35rem;
+   margin: 1rem 1rem 0rem 2.5rem;
+ 
+   @media(max-width:1024px) {
+     display:block;
+     width:20.3rem;
+     height: 8.5rem;
+     margin:0.5rem 0.5rem 0rem 0.5rem ;
+     justify-content: center;
+     align-tens: center;
+   }
+ }
+ 
+ .juntos-flex {
+   display:-webkit-box; 
+   width: 17rem;
+ 
+   @media (max-width:1024px) {
+     display:ruby;
+   }
+ }
+ 
+ span:hover {
+   opacity: 1;
+ }
+ 
+ #close-modal,
+ #modal {
+   transition: 0.5s;
+   opacity: 1;
+   pointer-events: all;
+ }
+ 
+ #close-modal {
+   position: fixed;
+   top: 0;
+   right: 0%;
+   color: black;
+   background-color: #ea580c;
+   z-index: 5; /*Serve para colocar o botão na frente dos outros elementos, impossibilitando que o usuário clique em alguma coisa fora do model*/
+ }
+ 
+ #fade {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.6);
+   z-index: 5;
+ }
+ 
+ #modal {
+   position: fixed;
+   left: 50%; /*Coloca 50% na esquerda da tela, não deixando o conteudo centralizado*/
+   top: 49.5%; /*Coloca 50% de cima da tela, não deixando o conteudo centralizado*/
+   transform: translate(-50%,-50%); /*Serev para colocar porcentagem negativa, centralizando o modal no centro*/
+   background: linear-gradient(to top, #e5e5e5, #d4d4d4);
+   box-shadow: 1px 1px 5px 0px ;
+   z-index: 10;
+   width: 50rem;
+   height: 42.6rem;
+   max-width: 95%; /*Serve para colocar um limite de 90%, caso a tela seja menor de 500px ele deixa em 90%*/
+   padding: 1.2rem;
+   border-radius: 0.5rem;
+   align-items: center;
+   justify-content: center;/*De baixo para cima*/
+ 
+   @media(max-width:1024px) {
+   height: 54rem;
+   }
+ }
+ 
+ #fade,
+ #modal {
+   transition: 0.5s;
+   opacity: 1;
+   pointer-events: all;
+ }
+ 
+ .modal-header {
+   display: flex; /*Serve para deixar um item ao lado do outro*/
+   justify-content: space-between; /*Serve para deixar espaçamento entre os itens*/
+   align-items: center;
+   border-bottom: 1px solid #acacac; /*Serve parea colcoar um borda entre o titulo do modal e o conteudo*/
+   margin-bottom: 1rem;
+   padding-bottom: 1rem;
+   flex-direction: column;
+ }
+ 
+ .modal-body p {
+   margin-bottom: 1rem;
+ }
+ 
+ /*Esta escondendo o modal e impossibilitando o clique fora do modal*/
+ #modal.hide,
+ #fade.hide {
+   opacity: 0;
+   pointer-events: none;
+ }
+ 
+ /*Fazendo com que o modal venha de cima para baixo*/
+ #modal.hide {
+   top: 0px;
+ }
+ }
