--- a/style.css
+++ b/style.css
@@ -305,7 +305,8 @@
    box-shadow: 1px 1px 5px 0px ;
    z-index: 10;
    width: 50rem;
-   height: 42.6rem;
+   /* height: 42.6rem; */
+   min-height: 100%;
    max-width: 95%; /*Serve para colocar um limite de 90%, caso a tela seja menor de 500px ele deixa em 90%*/
    padding: 1.2rem;
    border-radius: 0.5rem;
