--- a/style.css
+++ b/style.css
@@ -64,11 +64,12 @@ div {
   margin: auto;
   width: 89%;
   padding: 0.3%;
-  margin-top: 0.5rem;
+  margin-top: 0.1rem;
 
   @media (max-width: 1280px) {
     display: block;
     margin-bottom:0%;
+  
    
   }
 }
@@ -98,14 +99,14 @@ input:houver {
   width: 80rem;
 
    height: 55rem; 
-  background-color: rgba(250, 241, 241, 0.534);
+  /* background-color: rgba(250, 241, 241, 0.534); */
   display: flex;
   align-items: center; /*Serve para colocar o texto no centro*/
   /* justify-content: center; */
   border-radius: 15px; /*Serve para colocar uma borda arredondada*/
   box-shadow: 1px 1px 5px 0px gray; /*Serve para colocar uma borda sombreada*/
   /*backdrop-filter: blur(100px); Serve para colcoar um blur na div*/
-  margin-top: 3rem;
+   margin-top: 3rem; 
   margin-bottom: 3rem;
 
   @media (max-width: 1280px) {
@@ -113,6 +114,7 @@ input:houver {
     width: 100%;
     flex-flow: column;
     box-shadow: none;
+    margin-top: 0rem;
   }
 
   button {
@@ -174,6 +176,7 @@ input:houver {
     float: left;
     width: auto;
     display: flex;
+    margin-left: 5px;
   }
 
   .input-text-aling-left {
@@ -187,7 +190,7 @@ input:houver {
   .container-infos {
     /*DinoAventura*/
     background-color: #ec6f01;
-    height: 54.6rem; /*Altura da cor*/
+    height: 55rem; /*Altura da cor*/
     width: 45rem; /*Comprimento da cor*/
     display: flex;
     border-radius: 15px 0px 0px 15px;
@@ -227,8 +230,7 @@ input:houver {
 
   #openModal {
     display: flex;
-    margin: 0rem 1rem 0rem 0rem;
-    width: 7.1rem;
+    width: auto;
     justify-content: left;
     align-items: center;
 
@@ -249,7 +251,7 @@ input:houver {
     @media (max-width: 1280px) {
       display: block;
       width: 20.3rem;
-      height: 8.5rem;
+      height: 5rem;
       margin: 0.5rem 0.5rem 0rem 0.5rem;
       justify-content: center;
       align-tens: center;
@@ -315,9 +317,10 @@ input:houver {
     align-items: center;
     justify-content: center; /*De baixo para cima*/
     overflow-y: auto; /*Serve para colocar a barra de rolagem nos termos de uso*/
+   
 
     @media (max-width: 1280px) {
-      height: 46rem;
+      height: 65rem;
     }
   }
 
@@ -354,4 +357,57 @@ input:houver {
   #modal.hide {
     top: 0px;
   }
+}
+
+/*************************************************************************************************************/
+
+#error_mensagem {
+  margin: 0;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100dvw;
+  height: 100dvh;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+#error_mensagem .modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
+#error_mensagem .modal-content h2 {
+margin-top: 0;
+font-size: 18px;
+}
+
+#error_mensagem .modal-content p {
+  font-size: 14px;
+}
+
+#error_mensagem .modal-content button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+#error_btn {
+  padding: 8px 120px;
+  border-radius: 0.3rem;
+  background-color: #ec6f01;
+  color: white; /*cor da letra de dentro do botão*/
+  font-weight: 800;
+  transition: 1.1s ease;
+  margin-top: 2%; /*Serve para dar um espaçamento entre os campos*/
+  cursor: pointer;
+  border: none;
 }
