--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ h1 {
 }
 h2 {
   margin-top: 3rem;
+
+  @media(max-width:1280px) {
+  margin-top: 8rem;
+  }
 }
 
 h6 {
@@ -310,7 +314,7 @@ input:houver {
     z-index: 10;
     width: 50rem;
     /* height: 42.6rem; */
-    min-height: 100%;
+    /* min-height: 100%; */
     max-width: 95%; /*Serve para colocar um limite de 90%, caso a tela seja menor de 500px ele deixa em 90%*/
     padding: 1.2rem;
     border-radius: 0.5rem;
@@ -331,6 +335,9 @@ input:houver {
     pointer-events: all;
     margin: 0;
   }
+  #modal-header {
+    margin-top: 5rem;
+  }
 
   .modal-header {
     display: flex; /*Serve para deixar um item ao lado do outro*/
@@ -340,10 +347,14 @@ input:houver {
     margin-bottom: 1rem;
     padding-bottom: 1rem;
     flex-direction: column;
+
+    @media(max-width:1280px) {
+      justify-content: center;
+    }
   }
 
   .modal-body p {
-    margin-bottom: 1rem;
+     margin-bottom: 1rem; 
   }
 
   /*Esta escondendo o modal e impossibilitando o clique fora do modal*/
