--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ div {
   margin: auto;
   width: 89%;
   padding: 0.3%;
-  margin-top: 0.1rem;
+
 
   @media (max-width: 1280px) {
     display: block;
@@ -83,7 +83,7 @@ h2 {
   margin-top: 3rem;
 
   @media(max-width:1280px) {
-  margin-top: 8rem;
+  margin-top: 6rem;
   }
 }
 
@@ -101,7 +101,6 @@ input:houver {
 .main-container {
   padding: 0%;
   width: 80rem;
-
    height: 55rem; 
   /* background-color: rgba(250, 241, 241, 0.534); */
   display: flex;
@@ -221,6 +220,9 @@ input:houver {
       justify-content: center;
     }
   }
+  #LGPD {
+    margin-bottom:6rem;
+  }
 
   /*/////////////////////////////////////////////////////////////////////////////*/
 
@@ -302,38 +304,30 @@ input:houver {
   }
 
   #modal {
+    height: 48.5rem;
     position: fixed;
-    left: 50%; /*Coloca 50% na esquerda da tela, não deixando o conteudo centralizado*/
-    top: 49.5%; /*Coloca 50% de cima da tela, não deixando o conteudo centralizado*/
-    transform: translate(
-      -50%,
-      -50%
-    ); /*Serev para colocar porcentagem negativa, centralizando o modal no centro*/
-    background: linear-gradient(to top, #e5e5e5, #d4d4d4);
-    box-shadow: 1px 1px 5px 0px;
-    z-index: 10;
-    width: 50rem;
-    /* height: 42.6rem; */
-    /* min-height: 100%; */
-    max-width: 95%; /*Serve para colocar um limite de 90%, caso a tela seja menor de 500px ele deixa em 90%*/
-    padding: 1.2rem;
-    border-radius: 0.5rem;
-    align-items: center;
-    justify-content: center; /*De baixo para cima*/
-    overflow-y: auto; /*Serve para colocar a barra de rolagem nos termos de uso*/
-   
+  background: linear-gradient(to top, #e5e5e5, #d4d4d4);
+  box-shadow: 1px 1px 5px 0px;
+  z-index: 10;
+  width: 50rem;
+  max-width: 95%; /*Serve para colocar um limite de 90%, caso a tela seja menor de 500px ele deixa em 90%*/
+  padding: 1.2rem;
+  border-radius: 0.5rem;
+  align-items: center;
+  overflow-y: auto;
 
-    @media (max-width: 1280px) {
-      height: 65rem;
-    }
+  @media(min-width:1280px) {
+  margin-left: 15rem;
   }
+  }
+ 
 
   #fade,
   #modal {
     transition: 0.5s;
     opacity: 1;
     pointer-events: all;
-    margin: 0;
+    /* margin: 0; */
   }
   #modal-header {
     margin-top: 5rem;
