--- a/style.css
+++ b/style.css
@@ -83,9 +83,9 @@ h1 {
 }
 
 h2 {
-    margin-top: 3rem;
+    /* margin-top: 3rem; */
     @media(max-width: 1280px) {
-        margin-top: 6rem;
+        /* margin-top: 6rem; */
     }
 }
 
